feat: add get list product by apply date